# pdfname

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  package.yaml  pdfname.cabal  stack-8.10.5.yaml  stack-8.10.7.yaml  stack-9.6.3.yaml  stack-9.6.5.yaml  stack-9.8.2.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
notes/: release-procedure.txt
src/: CreateFile.hs  Main.hs  Options.hs  Substituions.hs  Substitutions.hs  Utilities.hs
src/PDFName/: CreateFile.hs  Options.hs  Substitutions.hs  Utilities.hs
src/main/: Main.hs
test/: Main.hs  Test.hs  Tests.hs  fail.test  hyperref-template.tex  pdfinfo-template.tex  readme-example.tex  succeed.test
test/TODO/: README.txt
test/TODO/fail/: issue-3-empty-pdf-file.golden  issue-3-non-pdf-file.golden
test/author/: unicode-00A1-00AD-00C3.tex
test/cl-option/: help.golden
test/cli-option/: no-options.golden
test/fail/: corrupted-file-exception.golden  issue-3-non-pdf-file.golden  issue-3-non-pdf-file.txt  unknow-symbol-exception.golden  unknow-symbol-exception.tex
test/succeed/: empty-info.golden  empty-info.tex  french.golden  french.tex  html-entity-dec-252.golden  html-entity-hex-0015B.golden  html-entity-hex-00FC.tex  html-entity-hex-015B.tex  html-entity-hex-201D.tex  html-entity-hex-201E.golden  html-entity-hex-201E.tex  html-entity-hex-five-symbols.golden  html-entity-hex-five-symbols.tex  html-entity-name-Auml.golden  html-entity-name-Auml.tex  html-entity-twice.golden  issue-2.golden  issue-2.tex  issue-5-201C-201D.golden  readme-example.golden  readme-example.tex  romanian.tex  spanish.golden  swedish.tex  unicode-00A1-00AD-00C3.golden  unicode-00A1-00AD-00C3.tex  unicode-00C3-00AD.golden  unicode-00C3-00AD.tex  unicode-00C3-00B6.golden  unicode-00C3-00B6.tex  weird-unicode-00C3-00A1.golden  weird-unicode-00C3-00A1.tex  weird-unicode-00C3-00A9.golden  weird-unicode-00C3-00A9.tex  weird-unicode-00C3-00AD.golden  weird-unicode-00C3-00B6.golden  weird-unicode-00C5-203A.golden
test/succeed/alphabet/: albanian.golden  albanian.tex  azerbaijani.golden  azerbaijani.tex  czech.golden  czech.tex  dano-norwegian.golden  dano-norwegian.tex  dutch.golden  dutch.tex  esperanto.golden  esperanto.tex  estonian.golden  estonian.tex  french.golden  german.golden  hungarian.golden  hungarian.tex  icelandic.golden  icelandic.tex  inuttitut.golden  inuttitut.tex  italian.golden  italian.tex  latvian.golden  latvian.tex  lithuanian.golden  lithuanian.tex  livonian.golden  livonian.tex  maltese.golden  maltese.tex  polish.golden  polish.tex  portuguese.golden  portuguese.tex  romanian-obsolete-letters.golden  romanian-obsolete-letters.tex  romanian.golden  romanian.tex  (+12 more)
test/succeed/author/: forename-initial-dot-surname.tex  forename-initial-surname.tex  forename-initial-surname1-surname2.tex  forename-middlename-surname.tex  forename-surname-and-forename-surname.golden  forename-surname-and-forename-surname.tex  forename-surname-comma-forename-surname-and-forename-surname.golden  forename-surname-comma-forename-surname-and-forename-surname.tex  forename-surname-comma-forename-surname-comma-and-forename-surname.golden  forename-surname-comma-forename-surname-comma-and-forename-surname.tex  forename-surname-comma-forename-surname.golden  forename-surname-comma-forename-surname.tex  forename-surname.golden  forename-surname.tex  forename-surname1-surname2.tex  initial-surname.tex  issue-xxx.golden  issue-xxx.tex  unicode-00A1-00AD-00C3.golden  unicode-00A1-00AD-00C3.tex
test/succeed/html-entity/: hex-00FC.golden  hex-201D.golden  hex-five-symbols.golden  name-Auml.golden
test/succeed/language/: german.golden  german.tex  spanish.tex  swedish.golden
test/succeed/title/: emphasis-italic-0.golden  emphasis-italic-0.tex  hex-00FC-201D-201E.golden  hex-00FC-201D-201E.tex  hex-015B.golden  hex-015B.tex  issue-2.golden  issue-5-201C-201D.golden  issue-5-201C-201D.tex  issue-5.tex  issue-6-2135.golden  issue-6-2135.tex  remove-emphasis-italic.golden  remove-emphasis-italic.tex  remove-subscript-and-html-entity-hex.golden  remove-subscript-and-html-entity-hex.tex  remove-subscript.golden  remove-subscript.tex  remove-tex.golden  remove-tex.tex  space-after-comma.golden  space-after-comma.tex  subscript-3.golden  subscript-3.tex  subscript-hex-03C9.golden  subscript-hex-03C9.tex  tex-lambda.tex  unicode-0028-0029.golden  (+5 more)
test/title/: hex-00FC-201D-201E.tex  hex-015B.tex  issue-2.tex  subscript-3.tex  unicode-0028-0029.tex
(+13 files in other folders)
