name:          pdfname
version:       0.3.1
license:       MIT
license-file:  LICENSE
author:        Andrés Sicard-Ramírez with contributions by Juan Pedro Villa-Isaza.
maintainer:    Andrés Sicard-Ramírez <asr@eafit.edu.co>
copyright:     Andrés Sicard-Ramírez 2017
homepage:      https://github.com/asr/pdfname#readme
bug-reports:   https://github.com/asr/pdfname/issues
category:      PDF
build-type:    Simple
cabal-version: >= 1.10
synopsis:      Name a PDF file using information from the pdfinfo command
description:
  The @pdfname@ command-line program names a PDF file using the
  author, year of creation and title information extracted from the
  @pdfinfo@ program.
tested-with:   GHC == 8.2.1

extra-source-files: CHANGELOG.md
                    README.md

source-repository head
  type:     git
  location: https://github.com/asr/pdfname

executable pdfname
  main-is:        Main.hs
  hs-source-dirs: src

  build-depends:  base                 >= 4.9.1.0 && < 4.11
                , directory            >= 1.3.0.0 && < 1.4
                , filepath             >= 1.4.1.1 && < 1.5
                , optparse-applicative >= 0.14.0  && < 0.15
                , pdfinfo              >= 1.5.4   && < 1.6
                , text                 >= 1.2.2.2 && < 1.3

  default-language: Haskell2010

  default-extensions:  OverloadedStrings
                     , UnicodeSyntax

  other-modules:  CreateFile
                , Options
                , Paths_pdfname
                , Substitutions
                , Utilities

  if impl(ghc >= 8.0)
    ghc-options:  -Wall
                  -- TODO (2017-07-14): I cannot use `cabal repl` if
                  -- this flag is on.
                  -- -Werror
                  -Widentities
                  -Wincomplete-record-updates
                  -Wincomplete-uni-patterns
                  -Wderiving-typeable
                  -Wmissing-import-lists
                  -Wmissing-local-signatures
                  -Wmissing-monadfail-instances
                  -Wmissing-pattern-synonym-signatures
                  -Wmonomorphism-restriction
                  -Wnoncanonical-monad-instances
                  -Wnoncanonical-monadfail-instances
                  -Wnoncanonical-monoid-instances
                  -Wredundant-constraints
                  -Wsemigroup
                  -Wunused-binds
                  -Wunused-type-patterns

  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
                 -Wsimplifiable-class-constraints

-- From Agda.cabal:
--
-- Cabal testsuite integration has some serious bugs, but we
-- can still make it work. See also:
-- https://github.com/haskell/cabal/issues/1938
-- https://github.com/haskell/cabal/issues/2214
-- https://github.com/haskell/cabal/issues/1953
--
-- This test suite should only be run using the Makefile.

test-suite pdfname-tests
  type:            exitcode-stdio-1.0
  hs-source-dirs:  src, test
  main-is:         Test.hs

  build-depends:  base         >= 4.9.1.0  && < 4.11
                , filepath     >= 1.4.1.1  && < 1.5
                , HUnit        >= 1.6.0.0  && < 1.7
                , process      >= 1.4.0.3  && < 1.7
                , tasty        >= 0.11.2.2 && < 1.12
                , tasty-hunit  >= 0.9.2    && < 0.10
                , tasty-silver >= 3.1.10   && < 3.2
                , text         >= 1.2.2.2  && < 1.3

  default-language: Haskell2010

  default-extensions:  OverloadedStrings
                     , UnicodeSyntax

  if impl(ghc >= 8.0)
    ghc-options:  -Wall
--                  -Werror
                  -Widentities
                  -Wincomplete-record-updates
                  -Wincomplete-uni-patterns
                  -Wderiving-typeable
                  -Wmissing-import-lists
                  -Wmissing-local-signatures
                  -Wmissing-monadfail-instances
                  -Wmissing-pattern-synonym-signatures
                  -Wmonomorphism-restriction
                  -Wnoncanonical-monad-instances
                  -Wnoncanonical-monadfail-instances
                  -Wnoncanonical-monoid-instances
                  -Wredundant-constraints
                  -Wsemigroup
                  -Wunused-binds
                  -Wunused-type-patterns

  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
                 -Wsimplifiable-class-constraints
